# clickme

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  CONVENTIONS.md  README.md  docker-compose.yml  llms.txt
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py
backend/app/ai/agents/: __init__.py
backend/app/ai/agents/analyzer/: __init__.py  agent.py
backend/app/ai/agents/chat/: __init__.py  agent.py
backend/app/ai/agents/simulator/: __init__.py  pipeline.py
backend/app/ai/kernel/: __init__.py  agent.py  orchestrator.py  registry.py  tracing.py
backend/app/ai/kernel/llm/: __init__.py  modality_router.py  router.py
backend/app/alembic/: env.py
backend/app/contracts/: __init__.py  chat_api.py  simulation_api.py  simulation_pipeline.py  sse.py
backend/app/db/: __init__.py  enums.py  session.py
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 0001_initial_schema_17_tables.py
backend/app/db/models/: __init__.py  ad.py  audit_log.py  base.py  chat.py  generated_ad.py  organization.py  persona_template.py  project.py  refresh_token.py  report.py  simulation.py  user.py  user_settings.py
backend/app/domains/admin/: dto.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/ads/: dto.py  repository.py  router.py  schemas.py  service.py  validation.py
backend/app/domains/auth/: dto.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/billing/: dto.py  router.py  schemas.py
backend/app/domains/chat/: repository.py  router.py  service.py
backend/app/domains/health/: router.py
backend/app/domains/projects/: dto.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/reports/: dto.py  router.py  service.py
backend/app/domains/simulations/: repository.py  router.py  service.py
backend/app/domains/users/: dto.py  router.py  schemas.py  service.py
backend/app/infra/: __init__.py  local_storage.py  s3_storage.py  storage.py
backend/app/models/: __init__.py  ad.py  audit_log.py  base.py  chat.py  generated_ad.py  organization.py  persona_template.py  project.py  refresh_token.py  report.py  simulation.py  user.py  user_settings.py
backend/app/shared/: config.py  db.py  deps.py  envelope.py  events.py  exceptions.py  logging.py  project_access.py  security.py
backend/scripts/: export_contracts.py  export_types.py  refactor_structure.py  seed.py
backend/tests/: conftest.py  test_chat_agent.py  test_e2e_flow.py  test_pipeline.py  test_storage.py
contracts/: README.md  auth.schema.json  chat.schema.json  common.schema.json  simulation.schema.json  sse.schema.json
frontend/: .env.example  next.config.ts  package.json  (+3 more)
(+36 files in other folders)
