[project]
name = "clickme-backend"
version = "0.1.0"
description = "Click Me — AI 광고 성과 시뮬레이터 (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
]

# 앱(라이브러리 아님) → 루트 프로젝트 빌드 생략
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
