[project]
name = "clickme-backend"
version = "0.1.0"
description = "Click Me — AI 광고 성과 시뮬레이터 (backend)"
requires-python = ">=3.12"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
    # db
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    # auth
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    # AI 엔진: LangChain·LangGraph(P2 승격)·LangSmith(트레이싱) + Multi-LLM(OpenAI·Claude·Gemini·Ollama)
    "langchain>=1.3.4",
    "langchain-core>=1.4.1",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "langchain-openai>=1.2.2",
    "langchain-anthropic>=1.4.4",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
]

# 앱(라이브러리 아님) → 루트 프로젝트 빌드 생략
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
# E/F=pycodestyle+pyflakes · I=isort(import 정렬) · UP=pyupgrade · B=bugbear · SIM=simplify · C4=comprehensions
# 대부분 `ruff check --fix`로 자동 수정됨
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = [
    "B008",   # FastAPI Depends/Form/File 기본 인자 — 프레임워크 표준 패턴
    "UP042",  # str+Enum 유지 (Pydantic/SQLAlchemy 직렬화 안정성, StrEnum 강제 X)
    "UP046",  # Generic[T] 기존 스타일 유지 (PEP695 강제 X)
    "UP047",
]

[tool.ruff.lint.per-file-ignores]
"scripts/seed.py" = ["E501"]  # mock 시드 데이터의 긴 한글 문자열 허용

[tool.ruff.format]
# 기본값(더블쿼트·trailing comma) — `ruff format`으로 코드 정렬

